--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@
 .externalNativeBuild
 .cxx
 /app/release
-/app/playStore
-/app/amazon
-/app/cafeBazaar
+/app/prodPlayStore
+/app/prodAmazon
+/app/prodCafeBazaar
 /app/obfuscation
 /app/src/main/dbschemas
 google-services.json
