--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /app/prodPlayStore
 /app/prodAmazon
 /app/prodCafeBazaar
+/app/devPlayStore
 /app/obfuscation
 /app/src/main/dbschemas
 google-services.json
