--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name=".core.presentation.main.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.WarrantyRoster.Splash"
-            android:windowSoftInputMode="adjustPan|stateHidden">
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -35,7 +35,8 @@
 
         <activity
             android:name=".core.presentation.landing.LandingActivity"
-            android:theme="@style/Theme.WarrantyRoster.Landing" />
+            android:theme="@style/Theme.WarrantyRoster.Landing"
+            android:windowSoftInputMode="adjustResize" />
 
         <activity
             android:name="com.facebook.FacebookActivity"
