--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,19 @@
 .gradle
 /local.properties
 /.idea
+/.kotlin
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 .cxx
+/app/debug
 /app/release
-/app/prodPlayStore
-/app/prodAmazon
-/app/prodCafeBazaar
-/app/devPlayStore
+/app/dev
+/app/playStore
+/app/gitHub
+/app/cafeBazaar
+/app/myket
 /app/obfuscation
-/app/src/main/dbschemas
 google-services.json
 .safedk
