Enabled R8 optimized resource shrinking pipeline

--- a/gradle.properties
+++ b/gradle.properties
@@ -45,3 +45,8 @@ android.nonTransitiveRClass=true
 # This avoids the Java compilation step!
 android.enableBuildConfigAsBytecode=true
 ##------------------------------End: Build Config As Bytecode------------------------------
+##------------------------------Begin: R8 Optimized Resource Shrinking Pipeline------------------------------
+# Starting with AGP 9.0.0, optimized resource shrinking becomes the standard behavior for any project
+# that has the resource shrinker turned on (optimizedResourceShrinking property can be removed)
+android.r8.optimizedResourceShrinking=true
+##------------------------------End: R8 Optimized Resource Shrinking Pipeline------------------------------
